kubernetes/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-app-deployment
  labels:
    app: test-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-app
  template:
    metadata:
      labels:
        app: test-app
    spec:
      nodeSelector:
        cloud.google.com/gke-nodepool: application-pool
      containers:
        - name: test-app-container
          image: k8s.gcr.io/hpa-example
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "100m"
            limits:
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: test-app-service
  labels:
    app: test-app
spec:
  type: ClusterIP
  selector:
    app: test-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
